--- a/AlmaShopping/app/src/main/res/layout/activity_detalle_marca.xml
+++ b/AlmaShopping/app/src/main/res/layout/activity_detalle_marca.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:orientation="vertical"
     android:background="#ffffff"
+    android:padding="10dp"
     tools:context="com.almashopping.android">
 
     <ImageView
