--- a/Qruda/app/src/main/res/layout/activity_perfil_autor.xml
+++ b/Qruda/app/src/main/res/layout/activity_perfil_autor.xml
@@ -16,16 +16,16 @@
         android:gravity="center"
         android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:text="Nombre de Usuario"
         />
 
     <ImageView
-        android:layout_width="250dp"
-        android:layout_height="60dp"
+        android:layout_width="260dp"
+        android:layout_height="70dp"
         android:scaleType="centerCrop"
         android:layout_gravity="center"
         android:id="@+id/ImagenPerfil"
-        android:layout_weight="3"
+        android:layout_weight="4"
+        android:layout_marginTop="10dp"
         android:src="@drawable/ic_action_user"
         />
 
@@ -38,31 +38,27 @@
         android:textStyle="bold"
         android:textSize="7pt"
         android:gravity="center"
-        android:layout_gravity="center_vertical"
         android:layout_weight="1"
-        android:text="Nombre y apellido del autor"
+        android:text=""
         />
 
     <LinearLayout
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
     android:layout_height="2dp"
         android:layout_weight="1"
+        android:layout_gravity="center"
+        android:gravity="center"
         android:background="#ffffff">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="3dp"
-            android:layout_weight="2"
-            android:text="seguidores"
-            android:textColor="#000000"/>
 
         <Button
-            android:layout_width="wrap_content" android:layout_height="fill_parent"
-            android:layout_weight="1"
+            android:layout_width="200dp" android:layout_height="fill_parent"
             android:text="Seguir"
+            android:layout_weight="1"
             android:id="@+id/buttonSeguir"
             android:layout_gravity="center"
             android:gravity="center"
+            android:layout_marginBottom="15dp"
             android:textAlignment="center"
             />
 
@@ -74,7 +70,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
 
-        android:layout_height="2dp"
+        android:layout_height="5dp"
         android:layout_weight="1"
         android:background="#000000">
 
@@ -82,7 +78,7 @@
             android:layout_width="0.0dp" android:layout_height="fill_parent"
             android:layout_weight="1.0"
             android:text="Articulo"
-            android:id="@+id/button"
+            android:id="@+id/btnArticuloAutor"
             android:background="@drawable/boton_inferior"
             android:drawableLeft="@drawable/ic_action_book"
             style="@style/Theme.Qruda.Boton"
@@ -106,9 +102,9 @@
 
         <Button
             android:layout_width="0.0dp" android:layout_height="fill_parent"
-            android:layout_weight="1.0"
+            android:layout_weight="1"
             android:text="Comentarios"
-            android:id="@+id/button3"
+            android:id="@+id/btnComentariosAutor"
             android:layout_gravity="center"
             android:gravity="center"
             android:textAlignment="center"
