--- a/Almashopping2/app/src/main/res/values/styles.xml
+++ b/Almashopping2/app/src/main/res/values/styles.xml
@@ -23,6 +23,17 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Theme.Alma.EncabezadoDetalleProducto">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textAlignment">gravity</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/border</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
     <style name="Theme.Alma.ContenedorProducto">
         <item name="android:background">@color/white</item>
         <item name="android:textColor">@color/gray</item>
