--- a/Almashopping2/app/src/main/res/layout/fragment_home.xml
+++ b/Almashopping2/app/src/main/res/layout/fragment_home.xml
@@ -3,13 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/TxtDetalle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"/>
+    <GridView
+        android:id="@+id/Grid_productosCajita"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="2"
+        style="@style/Theme.Alma.ContenedorProductos"
+        android:stretchMode="columnWidth"
+        android:gravity="center"
+        android:columnWidth="100dp"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        />
 
 
 
