--- a/Almashopping2/app/src/main/res/menu/menu_detalle_producto.xml
+++ b/Almashopping2/app/src/main/res/menu/menu_detalle_producto.xml
@@ -2,6 +2,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="android.com.almashopping.DetalleProducto">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+
+    <item android:id="@+id/btnBookmark" android:title="Agregar a Favoritos"
+        android:icon="@drawable/ic_action_like"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/btnShare" android:title="Compartir"
+        android:icon="@drawable/ic_action_share"
+        app:showAsAction="always" />
+
+    <item android:id="@+id/btnInfoAlma" android:title="Información General"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/btnTerminos" android:title="Terminos y Condiciones"
+        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/btnContacto" android:title="Contacto"
+        android:orderInCategory="100" app:showAsAction="never" />
+
 </menu>
