--- a/Almashopping2/app/src/main/res/layout/productos_grid_item.xml
+++ b/Almashopping2/app/src/main/res/layout/productos_grid_item.xml
@@ -9,6 +9,7 @@
     <TextView
         android:id="@+id/autor"
         android:text="Marca"
+        android:textStyle="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
@@ -17,8 +18,8 @@
         android:id="@+id/image"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:contentDescription="icon"
         android:gravity="left"
         android:layout_gravity="left"
@@ -27,6 +28,13 @@
         android:scaleType="centerCrop"
         android:src="@drawable/ic_action_camera"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginTop="3dp"
+        android:layout_alignParentBottom="true">
 
     <TextView
         android:id="@+id/titulo"
@@ -45,5 +53,6 @@
         style="@style/Theme.Alma.precio"
         />
 
+    </LinearLayout>
 
 </LinearLayout>
