--- a/Almashopping2/app/src/main/res/values/Colors.xml
+++ b/Almashopping2/app/src/main/res/values/Colors.xml
@@ -4,6 +4,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="greendark">#0CB490</color>
+    <color name="red">#D14130</color>
     <color name="gray">#666666</color>
     <color name="list_item_title">#fff</color>
     <color name="list_background">#303030</color>
@@ -12,5 +13,7 @@
     <color name="counter_text_bg">#626262</color>
     <color name="counter_text_color">#c5c4c4</color>
     <color name="purple">#B166A1</color>
-
+    <color name="transparent">#00000000</color>
+    <color name="progress_bg">#727072</color>
+    <color name="progress_text">#ededed</color>
 </resources>
