--- a/Almashopping2/app/src/main/res/layout/activity_detalle_producto.xml
+++ b/Almashopping2/app/src/main/res/layout/activity_detalle_producto.xml
@@ -41,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/greendark"
-                android:textSize="15dp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 android:id="@+id/titleProduct"
                 android:layout_gravity="center_horizontal" />
@@ -51,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:textColor="@color/black"
                 android:textStyle="bold"
+                android:textSize="20dp"
                 android:id="@+id/price"
                 android:elegantTextHeight="false"
                 android:layout_gravity="center_horizontal" />
@@ -71,7 +72,11 @@
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:id="@+id/cantidadAdd"
+                android:textAlignment="center"
+                android:gravity="center"
                 android:text="0"
+
+                android:layout_gravity="center"
                 android:background="@color/white"/>
 
               <ImageButton
@@ -110,6 +115,8 @@
 
 <TextView
     android:layout_width="match_parent"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
     android:layout_height="wrap_content"
     android:id="@+id/descriptionProduct"
     />
