--- a/Almashopping2/app/src/main/res/layout/header_menu.xml
+++ b/Almashopping2/app/src/main/res/layout/header_menu.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="70dp"
@@ -15,8 +17,8 @@
         android:gravity="center"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imgProfilHeader">
+        android:layout_alignParentTop="true">
+<!--        android:layout_toEndOf="@+id/imgProfilHeader">-->
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -27,11 +29,11 @@
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Ver Perfil"
+            android:text=""
             android:textColor="#0CB490"
-            android:id="@+id/textView3"
+            android:id="@+id/userLastName"
             android:layout_weight="1"/>
 
         </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
