--- a/Almashopping2/app/src/main/res/layout/shopbarheader.xml
+++ b/Almashopping2/app/src/main/res/layout/shopbarheader.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_height="wrap_content"
+android:layout_width="match_parent"
+android:orientation="horizontal">
+<TextView
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:text="MI CARRITO"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    </LinearLayout>
+    android:textColor="@color/gray"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="5dp"
+    android:text="MI CARRITO"/>
+<TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content" />
+</LinearLayout>
