--- a/ECA/Views/Shared/_menu.cshtml
+++ b/ECA/Views/Shared/_menu.cshtml
@@ -1,12 +1,12 @@
 ﻿
     <div class="nav-wrapper ">
         
-        <a id="logo-container" href="#"><img src="@Url.Content("~/content/img/logo_site.png")" class="brand-logo-image" /></a>
+        <a id="logo-container" href="@Url.Content("~/")"><img src="@Url.Content("~/content/img/logo_site.png")" class="brand-logo-image" /></a>
         <ul class="right hide-on-med-and-down">
             <li><a href="@Url.Content("~/Series")"><i class="mdi-social-school left"></i>Series</a></li>
             <li><a href="@Url.Content("~/Articles")"><i class="mdi-action-help left"></i>Como se hace?</a></li>
             <li><a href="@Url.Content("~/News")"><i class="mdi-social-whatshot left"></i>Noticias</a></li>
-            <li><a href="#"><i class="mdi-action-event left"></i>Eventos</a></li>
+            @*<li><a href="#"><i class="mdi-action-event left"></i>Eventos</a></li>*@
             <li><a href="#"><i class="mdi-action-search"></i></a></li>
 
             <!--<li><a href="components.html"><i class="mdi-file-cloud-upload left"></i>Repositorios</a></li>-->
