--- a/ECA/Views/Inicio/index.cshtml
+++ b/ECA/Views/Inicio/index.cshtml
@@ -3,20 +3,19 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
- <!-- Navbar goes here -->
-<!-- Page Layout here -->
-<div class="row">
+@*<div class="row">
 
     <div class="col s12 m8 l9">
-        @Html.Partial("_LastPost")        
-
+        @Html.Action("GetLastPost", "Inicio")
     </div>
 
 
     <div class="col s12 m4 l3">
-        Barra lateral
 
     </div>
 
 
+</div>*@
+<div class="container">
+    @Html.Action("GetLastPost", "Inicio")
 </div>
