--- a/ECA/Views/Series/Index.cshtml
+++ b/ECA/Views/Series/Index.cshtml
@@ -3,3 +3,29 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div class="container">
+    @model IEnumerable<ECA.DAL.EC_Content>
+    @foreach (var item in Model)
+    {
+        <div class="content">
+            <div class="col s12">
+                <div class="card-panel grey lighten-5 z-depth-1">
+                    <div class="row valign-wrapper">
+                        <div class="col s2">
+                            <img src="@Html.DisplayFor(modelItem=>item.thumbail)" alt="" class="circle responsive-img">
+                        </div>
+
+                        <div class="col s10">
+                            <a class="orange-text " href="@Url.Content("~/Series/serie/"+item.Id+"")">
+                                <h5> @Html.DisplayFor(modelItem => item.Title)</h5>
+                            </a><br />
+                            <span class="black-text">
+                                Publicado por : @Html.DisplayFor(modelItem => item.EC_Users.Username)  el @Html.DisplayFor(modelItem => item.Publishdate)
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
+</div>
