--- a/ECA/Views/Shared/_Layout.cshtml
+++ b/ECA/Views/Shared/_Layout.cshtml
@@ -10,13 +10,11 @@
 </head>
 <body>
 
-    <nav class="blue-grey darken-4  blue-grey darken-3" role="navigation">
+    <nav class="blue-grey darken-4   orange darken-3" role="navigation">
         @Html.Partial("_Menu")
     </nav>
     <main>
-        <div class="section">
             @RenderBody()
-        </div>
     </main>
 
     <footer class="page-footer blue-grey darken-4  blue-grey darken-3">
